--- a/.github/build-deploy.yml
+++ b/.github/build-deploy.yml
@@ -1,14 +1,12 @@
 name: Build and Deploy Code
 
-on: 
-  branches: [push,  pull_request]
+on: [push,  pull_request]
 
 jobs:
   job1:
-    runs-on: ubuntu-latest
-    steps:
+     runs-on: ubuntu-latest
+     steps:
       - name: pull git repo
         uses: actions/checkout@v4
       - name: say Hello to Elvis
         run: echo "Hello elvis"
-        
