--- a/.github/build-deploy.yml
+++ b/.github/build-deploy.yml
@@ -6,7 +6,13 @@ jobs:
   job1:
      runs-on: ubuntu-latest
      steps:
-       - name: pull git repo
+       - name: pulling git repo
          uses: actions/checkout@v4
-       - name: say Hello to Elvis
-         run: echo "Hello elvis"
+       - name: sudo apt install python version 3.9
+         uses: actions/setup-python@v2
+         with:
+            python-version: "3.9"
+       - name: update pip
+         run: python -m pip install --upgrade pip
+       - name: istall all dependencies
+         run: pip install -r requirements.txt
