--- a/docker-compose -dev.yml
+++ b/docker-compose -dev.yml
@@ -17,14 +17,14 @@ services:
        # - ./.env
 
       environment:
-        - DATABASE_HOSTNAME=localhost
-        - DATABASE_PORT=5432
-        - DATABASE_PASSWORD=Kambumburi93.
-        - DATABASE_NAME=postgres
-        - DATABASE_USERNAME=postgres
-        - SECRET_KEY=09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
-        - ALGORITHM=HS256
-        - ACCESS_TOKEN_EXPIRE_MINUTES=30
+        - DATABASE_HOSTNAME=&{DATABASE_HOSTNAME}
+        - DATABASE_PORT=${DATABASE_PORT}
+        - DATABASE_PASSWORD=&{DATABASE_PASSWORD}
+        - DATABASE_NAME=&{DATABASE_NAME}
+        - DATABASE_USERNAME=${DATABASE_USERNAME}
+        - SECRET_KEY=${SECRET_KEY}
+        - ALGORITHM=${ALGORITHM}
+        - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
 
   postgres:
        image:
